--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <version>1.2.76</version>
         </dependency>
 
+        <!--解析DBF文件-->
+        <dependency>
+            <groupId>com.github.albfernandez</groupId>
+            <artifactId>javadbf</artifactId>
+            <version>1.13.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
